--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,6 +17,7 @@ jobs:
     - name: test
       run: npm run test    
  deploy:
+  needs: test
   runs-on: ubuntu-latest
   steps:
     - name: Get code 
